--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
-    "bootstrap-vue": "^2.14.0",
     "core-js": "^3.6.4",
     "firebase": "^7.14.5",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.1.6",
+    "vue-sweetalert2": "^3.0.5",
     "vuex": "^3.1.3",
     "vuexfire": "^3.2.2"
   },
