--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase": "^7.14.5",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "swiper": "^5.4.2",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.1.6",
     "vue-sweetalert2": "^3.0.5",
