--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate": "^1.0.0",
+    "animate.css": "^4.1.0",
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.4",
     "firebase": "^7.14.5",
@@ -20,7 +22,9 @@
     "vue-router": "^3.1.6",
     "vue-sweetalert2": "^3.0.5",
     "vuex": "^3.1.3",
-    "vuexfire": "^3.2.2"
+    "vuexfire": "^3.2.2",
+    "wow.js": "^1.2.2",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
