新增表單驗證功能

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "swiper": "^5.4.2",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-i18n": "^8.18.2",
     "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.1.6",
     "vue-sweetalert2": "^3.0.5",
